New places have been added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="container picture-1">
-            <h2 class="picture-heading" id="picture-1-heading">YERCARD</h2>
+            <h2 class="picture-heading" id="picture-heading">YERCARD</h2>
         </div>
 
         <div class="container container-1">
@@ -26,15 +26,15 @@
                 <h4 class="short-description">Yercaud is a hill station town in the south Indian state of Tamil Nadu. It lies in the Shevaroy Hills, known for their orange groves, and coffee, fruit and spice plantations. Yercaud Lake has a boathouse, and is surrounded by gardens and woods. On the lake’s eastern shore, Anna Park has local plants and a Japanese garden with bonsai. To the southwest, Lady’s Seat vantage point has a watchtower with a telescope.</h4>
             </div>
             <div class="top-float-text rellax" id="top-float-text-1" data-rellax-speed="-5">
-                <h5 class="float-text dark">Dist. from Bangalore: 200 km</h5>
+                <h5 class="float-text light">Dist. from Bangalore: 200 km</h5>
             </div>
             <div class="bottom-float-text rellax" id="bottom-float-text-1" data-rellax-speed="5">
-                <h5 class="float-text dark">Best time to visit: October – February</h5>
+                <h5 class="float-text light">Best time to visit: October – February</h5>
             </div>
         </div>
 
         <div class="container picture-2">
-            <h2 class="picture-heading" id="picture-1-heading">GANDIKOTA</h2>
+            <h2 class="picture-heading" id="picture-heading">GANDIKOTA</h2>
         </div>
 
         <div class="container container-2">
@@ -49,10 +49,93 @@
             </div>
         </div>
 
-        <div class="container picture-2">
-            <h2 class="picture-heading" id="picture-1-heading">GANDIKOTA</h2>
+        <div class="container picture-3">
+            <h2 class="picture-heading" id="picture-heading">KOVALAM</h2>
         </div>
+
+        <div class="container container-3">
+            <div class="container-text">
+                <h4 class="short-description">Kovalam is a small coastal town in the southern Indian state of Kerala, south of Thiruvananthapuram. Kovalam is an internationally renowned beach with three adjacent crescent beaches. A massive rocky promontory on the beach has created a beautiful bay of calm waters ideal for sea bathing. It's a popular tourist attraction for both local and international tourists. If you think your escape is all about some sandy beaches, water sports and a laid back evening enjoying the sunset with local seafood with a sip of your drink, well you can't go wrong with Kovalam.</h4>
+            </div>
+            <div class="top-float-text rellax" id="top-float-text-3" data-rellax-speed="-5">
+                <h5 class="float-text light">Dist. from Bangalore: 700 km</h5>
+            </div>
+            <div class="bottom-float-text rellax" id="bottom-float-text-3" data-rellax-speed="5">
+                <h5 class="float-text light">Best time to visit: November – February</h5>
+            </div>
+        </div>
+
+        <div class="container picture-4">
+            <h2 class="picture-heading" id="picture-heading">AGUMBE</h2>
+        </div>
+
+        <div class="container container-4">
+            <div class="container-text">
+                <h4 class="short-description">Often called the Cherrapunji of South India, Agumbe is known for its scenic beauty and bio-diversity. It is situated in Shimoga district of Karnataka. Surrounded by the Western Ghats mountains and lush rainforest, Trekking to the Kudlu Theertha Falls or Nishani Gudda offers a once in a lifetime experience.  it’s known for its many waterfalls, such as Onake Abbi, Bakarna and Jogi Gundi falls. The Sunset View Point overlooks forested valleys and offers panoramic views of the surrounding countryside and even the Arabian Sea on a clear day.</h4>
+            </div>
+            <div class="top-float-text rellax" id="top-float-text-4" data-rellax-speed="-5">
+                <h5 class="float-text light">Dist. from Bangalore: 350 km</h5>
+            </div>
+            <div class="bottom-float-text rellax" id="bottom-float-text-4" data-rellax-speed="5">
+                <h5 class="float-text light">Best time to visit: October – February</h5>
+            </div>
+        </div>
+
+        <div class="container picture-5">
+            <h2 class="picture-heading" id="picture-heading">BADAMI</h2>
+        </div>
+
+        <div class="container container-5">
+            <div class="container-text">
+                <h4 class="short-description">The Badami cave temples are located in the town of Badami in the north-central part of Karnataka. It is picturesquely nestled at the mouth of a ravine between two rocky hills. The exquisite sculptures and sandstone cliffs of Badami bring forth many a tale from the yesteryears. Four rock-cut caves adorned with ancient carved pillars and bracket figures cut out of red sandstone is just a flight of steps away. The caves overlook the Agastya Theertha Lake, its banks dotted with a group of Bhutanatha Temples. the caves are best seen at sunset when the evening sun captures the rust-red tint of the sandstone.</h4>
+            </div>
+            <div class="top-float-text rellax" id="top-float-text-5" data-rellax-speed="-5">
+                <h5 class="float-text light">Dist. from Bangalore: 450 km</h5>
+            </div>
+            <div class="bottom-float-text rellax" id="bottom-float-text-5" data-rellax-speed="5">
+                <h5 class="float-text light">Best time to visit: October – March</h5>
+            </div>
+        </div>
+
+        <div class="container picture-6">
+            <h2 class="picture-heading" id="picture-heading">ETTINA BUJA</h2>
+        </div>
+
+        <div class="container container-6">
+            <div class="container-text">
+                <h4 class="short-description">Ettina Bhuja meaning Ox’s shoulder is one of the unexplored treks in Karnataka. it is situated in the Dakshin Kannada district, trekking inside the forest is the most thrilling part of the trek. The birds calling in the background and the leaves rustling in the wind, you will notice a sudden change in the surroundings as soon as you enter the forest. The best reward of the trek is when you reach the peak. The view of the lush green valley and the mountains is astonishing. A perfect setting for reflecting with the view of the ranges of Charmadi and Shishila valley.</h4>
+            </div>
+            <div class="top-float-text rellax" id="top-float-text-6" data-rellax-speed="-5">
+                <h5 class="float-text light">Dist. from Bangalore: 250 km</h5>
+            </div>
+            <div class="bottom-float-text rellax" id="bottom-float-text-6" data-rellax-speed="5">
+                <h5 class="float-text light">Best time to visit: September – February</h5>
+            </div>
+        </div>
+
+        <div class="container picture-7">
+            <h2 class="picture-heading" id="picture-heading">GOA</h2>
+        </div>
+
+        <div class="container container-7">
+            <div class="container-text">
+                <h4 class="short-description">Goa is popularly known as the Pearl of the orient and tourist paradise. It is located in India’s coastal belt on the western called the Konkan coast. It has an alarming scenic beauty. The architectural work done on Goan Temples, Churches and old houses has brought great laurels to Goa. It is the most preferred option by the people who are planning their holidays. Apart from attracting tourists from all over India, it also attracts tourists of foreign background.  The real essence of Goa lies in its rich history, unique culture and the original natural beauty.</h4>
+            </div>
+            <div class="top-float-text rellax" id="top-float-text-7" data-rellax-speed="-5">
+                <h5 class="float-text light">Dist. from Bangalore: 560 km</h5>
+            </div>
+            <div class="bottom-float-text rellax" id="bottom-float-text-7" data-rellax-speed="5">
+                <h5 class="float-text light">Best time to visit: November – February</h5>
+            </div>
+        </div>
+
+        <div class="container picture-7"> 
+            <h2 class="picture-heading" id="picture-heading">GOA</h2>
+        </div>
+
     </div>
+
+    
 
 <script src="./js/script.js"></script>
 <script src="./js/rellax.min.js"></script>
