--- a/index.html
+++ b/index.html
@@ -413,9 +413,9 @@
     </div>
 
     
-<script src="./js/script.js"></script>
-<script src="/js/jquery-3.4.1.min.js"></script>
-<script src="./js/rellax.min.js"></script>
+<script src="js/script.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/rellax.min.js"></script>
 <script>
     // Also can pass in optional settings block
     var rellax = new Rellax('.rellax', {
