Added few places

--- a/index.html
+++ b/index.html
@@ -356,18 +356,18 @@
         </div>
 
         <div class="container picture-22"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">SHRAVANABELAGOLA</h2>
+            <h2 class="picture-heading fade-in" id="picture-heading">GOKARNA</h2>
         </div>
 
         <div class="container container-22">
             <div class="container-text">
-                <h4 class="short-description fade-in">The Shravanabelagola Gomatheeswara statue is the largest monolithic idol in the world. It spans centuries with different ruling dynasties and kings adding their own contributions and so is a living historical evidence of the last millennia. Historians describe the idol of the Lord as both magnificent and munificent – both beautiful and graceful, breathtaking yet serene. It is this impossible combination of beauty and serenity that gives the Shravanabelagola its unique appeal. Standing 57 feet tall, the Lord is a beacon for the world-weary who flock here to shed their worldly burdens and to embrace a life of peace and ahimsa, meaning non-violence.</h4>
+                <h4 class="short-description fade-in">Gokarna, a small pilgrimage town in Karnataka has grown into a tourist destination over the years, thanks to its stretch of beautiful, sandy beaches. With the advent of foreigners thronging it, it no longer remains a quaint temple town, but a thriving vacation spot that is as laidback as Goa, only less commercial. In fact, many Goa regulars have now moved on to Gokarna’s pristine beaches where the crowds are less and the beaches cleaner.  Top attraction in Gokarna are Kudle beach, Mahabaleshwara temple, Om beach, Paradise beach, Maha Ganapathi Temple, Half-Moon beach & Marjin Fort.​</h4>
             </div>
             <div class="top-float-text rellax" id="top-float-text-22" data-rellax-speed="-5">
-                <h5 class="float-text light">Dist. from Bangalore: 150 km</h5>
+                <h5 class="float-text light">Dist. from Bangalore: 490 km</h5>
             </div>
             <div class="bottom-float-text rellax" id="bottom-float-text-22" data-rellax-speed="5">
-                <h5 class="float-text light">Best time to visit: October – March​</h5>
+                <h5 class="float-text light">Best time to visit: October – February</h5>
             </div>
         </div>
 
@@ -386,6 +386,39 @@
                 <h5 class="float-text light">Best time to visit: October – May​</h5>
             </div>
         </div>
+
+        <div class="container picture-24"> 
+            <h2 class="picture-heading fade-in" id="picture-heading">COORG</h2>
+        </div>
+
+        <div class="container container-24">
+            <div class="container-text">
+                <h4 class="short-description fade-in">Coorg is the most sought after and popular hill station of Karnataka. Lying serenely amidst high mountains, Coorg’s landscape stays misty throughout the year. Coorg is the largest producer of Coffee in India. Also, it is one of the places with highest rainfall across the nation. Undulating hills covered in lush green forests and a landscape dotted with coffee plantations, tea gardens and orange groves, this hill station has breathtakingly stunning scenic beauty. The popular tourist attractions in Kodagu include Bhagamandala, Talakaveri, Nisargadhama, Dubare, Abbey Falls, Iruppu Falls and Nagarahole National Park. Pushpagiri and Brahmagiri in Coorg are ideal for trekking. </h4>
+            </div>
+            <div class="top-float-text rellax" id="top-float-text-24" data-rellax-speed="-5">
+                <h5 class="float-text light">Dist. from Bangalore: 250 km</h5>
+            </div>
+            <div class="bottom-float-text rellax" id="bottom-float-text-24" data-rellax-speed="5">
+                <h5 class="float-text light">Best time to visit: October – May​</h5>
+            </div>
+        </div>
+
+        <div class="container picture-25"> 
+            <h2 class="picture-heading fade-in" id="picture-heading">JOG FALLS</h2>
+        </div>
+
+        <div class="container container-25">
+            <div class="container-text">
+                <h4 class="short-description fade-in">Jog Falls, a major attraction in Karnataka, is located in the Shimoga district of Karnataka. Also known by alternative names of Gerusoppe Falls, Gersoppa Falls, and Jogada Gundi, it is one of the highest waterfalls in India. During monsoons, one can see a breathtaking view of the falls with rainbows coming every now and then. It is one of nature’s splendid masterpieces and is situated in the dense evergreen forests. The effect of these striking falls is enhanced by the wild and beautiful region around it which is covered with plenty of abundant vegetation. This waterfall drops directly down without streaming on the rocks.</h4>
+            </div>
+            <div class="top-float-text rellax" id="top-float-text-25" data-rellax-speed="-5">
+                <h5 class="float-text light">Dist. from Bangalore: 420 km</h5>
+            </div>
+            <div class="bottom-float-text rellax" id="bottom-float-text-25" data-rellax-speed="5">
+                <h5 class="float-text light">Best time to visit: August – December​</h5>
+            </div>
+        </div>
+
         <div class="container outro">
             <div class="outro-text">
                 <h1 class="main-heading px-2 sliders from-left" id="main-heading">MORE TO COME!</h1>
