--- a/index.html
+++ b/index.html
@@ -421,15 +421,14 @@
 
         <div class="container outro">
             <div class="outro-text">
-                <h1 class="main-heading px-2 sliders from-left" id="main-heading">MORE TO COME!</h1>
+                <h1 class="main-heading px-2 sliders from-left" id="main-heading">MORE TO COME!!</h1>
                 <h2 class="main-sub-heading sliders from-right" id="main-sub-heading">Keep Watching...</h2>
             </div>
         </div>
         <div class="credits" align="center">
-            <div class="scrollToprocket" id="rocketbtn" onclick="scrollTopAnimated()"><img src="images/Compressed/rocket.png"></div>
-            <p class="credits-text">Designed and Built by Dev</p>
+            <div class="scrollToprocket sliders" id="rocketbtn" onclick="scrollTopAnimated()"><img src="images/Compressed/rocket.png"></div>
+            <p class="credits-text sliders">Designed and Built by Dev</p>
             <p class="credits-text-smaller">All photographic images are my own, fork this repo on <a href="https://github.com/dev92r/travel">GitHub</a></p>
-            <p class="credits-text-smaller"></p>
 
             <div class="social-media-section">
 
