--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="container picture-1">
-            <h2 class="picture-heading fade-in" id="picture-heading">YERCARD</h2>
+            <h2 class="picture-heading fade-in" id="picture-heading">YERCAUD</h2>
         </div>
 
         <div class="container container-1">
