--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <section>
         <div class="bg-wrap">
-            <div class="bg" style="background-image: url('http://placehold.co/1920x1080/505160/68829E');"></div>
+            <div class="bg" style="background-image: url('../images/Compressed/Yercard.jpg');"></div>
         </div>
     </section>
     <section>
         <div class="bg-wrap">
-            <div class="bg" style="background-image: url('http://placehold.co/1920x1080/75B1A9/D9B44A');"></div>
+            <div class="bg" style="background-image: url('../images/Compressed/Agumbe.jpg');"></div>
         </div>
     </section>
     <section>
