background image issue fixed

--- a/index.html
+++ b/index.html
@@ -10,21 +10,7 @@
     
 </head>
 <body>
-    <section>
-        <div class="bg-wrap">
-            <div class="bg" style="background-image: url('../images/Compressed/Yercard.jpg');"></div>
-        </div>
-    </section>
-    <section>
-        <div class="bg-wrap">
-            <div class="bg" style="background-image: url('../images/Compressed/Agumbe.jpg');"></div>
-        </div>
-    </section>
-    <section>
-        <div class="bg-wrap">
-            <div class="bg" style="background-image: url('http://placehold.co/1920x1080/4CB5F5/B7B8B6');"></div>
-        </div>
-    </section>
+    
     <div class="site-wrapper">
         <div class="container intro" id="top">
             <div class="intro-text">
@@ -32,9 +18,14 @@
                 <h2 class="main-sub-heading" id="main-sub-heading">Wander Often, Wonder Always.</h2>
             </div>
         </div>
-        <div class="container picture-1">
-            <h2 class="picture-heading fade-in" id="picture-heading">YERCAUD</h2>
+
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-1" style="background-image: url('../images/Compressed/Yercard.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">YERCAUD</h2>
+            </div>
         </div>
+
         <div class="container container-1">
             <div class="container-text">
                 <h4 class="short-description fade-in">Yercaud is a hill station town in the south Indian state of Tamil Nadu. It lies in the Shevaroy Hills, known for their orange groves, and coffee, fruit and spice plantations. Yercaud Lake has a boathouse, and is surrounded by gardens and woods. On the lake’s eastern shore, Anna Park has local plants and a Japanese garden with bonsai. To the southwest, Lady’s Seat vantage point has a watchtower with a telescope. A perfect weekend gataway to spend time with your loved ones!!!​</h4>
@@ -47,9 +38,14 @@
                     Best time to visit: October – February</h5>
             </div>
         </div>
-        <div class="container picture-2">
-            <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
+
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-2" style="background-image: url('../images/Compressed/Gandikota.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
+            </div>
         </div>
+
         <div class="container container-2">
             <div class="container-text">
                 <h4 class="short-description fade-in">Gandikota is a small village in the Kadapa district of Andhra Pradesh that is known for its spectacular gorge formed by the river Pennar that cuts through the Erramala hills. This handsome piece of nature’s architecture has come to be known as the Hidden Grand Canyon of India by travelers who visit it and get bewitched by its beauty. Apart from the unmatched beauty of the gorge, the mystical charm of the Gandikota fort makes a visit to this village all the more exciting for history lovers and adventure seekers.</h4>
@@ -61,8 +57,11 @@
                 <h5 class="float-text light">Best time to visit: September – February</h5>
             </div>
         </div>
-        <div class="container picture-3">
-            <h2 class="picture-heading fade-in" id="picture-heading">KOVALAM</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-3" style="background-image: url('../images/Compressed/Kovalam.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">KOVALAM</h2>
+            </div>
         </div>
         <div class="container container-3">
             <div class="container-text">
@@ -75,8 +74,11 @@
                 <h5 class="float-text light">Best time to visit: November – February</h5>
             </div>
         </div>
-        <div class="container picture-4">
-            <h2 class="picture-heading fade-in" id="picture-heading">AGUMBE</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-4" style="background-image: url('../images/Compressed/Agumbe.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">AGUMBE</h2>
+            </div>
         </div>
         <div class="container container-4">
             <div class="container-text">
@@ -89,8 +91,11 @@
                 <h5 class="float-text light">Best time to visit: October – February</h5>
             </div>
         </div>
-        <div class="container picture-5">
-            <h2 class="picture-heading fade-in" id="picture-heading">BADAMI</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-5" style="background-image: url('../images/Compressed/Badami.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">BADAMI</h2>
+            </div>
         </div>
         <div class="container container-5">
             <div class="container-text">
@@ -103,8 +108,11 @@
                 <h5 class="float-text light">Best time to visit: October – March</h5>
             </div>
         </div>
-        <div class="container picture-6">
-            <h2 class="picture-heading fade-in" id="picture-heading">ETTINA BUJA</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-6" style="background-image: url('../images/Compressed/EttinaBuja.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">ETTINA BUJA</h2>
+            </div>
         </div>
         <div class="container container-6">
             <div class="container-text">
@@ -117,8 +125,11 @@
                 <h5 class="float-text light">Best time to visit: September – February</h5>
             </div>
         </div>
-        <div class="container picture-7">
-            <h2 class="picture-heading fade-in" id="picture-heading">GOA</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-7" style="background-image: url('../images/Compressed/Goa.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">GOA</h2>
+            </div>
         </div>
         <div class="container container-7">
             <div class="container-text">
@@ -131,8 +142,11 @@
                 <h5 class="float-text light">Best time to visit: November – February</h5>
             </div>
         </div>
-        <div class="container picture-8"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">BELURU</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-8" style="background-image: url('../images/Compressed/Belur.jpg'); background-position: bottom center;"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">BELURU</h2>
+            </div>
         </div>
         <div class="container container-8">
             <div class="container-text">
@@ -145,8 +159,11 @@
                 <h5 class="float-text light">Best time to visit: October – February</h5>
             </div>
         </div>
-        <div class="container picture-9"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">KODACHADRI</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-9" style="background-image: url('../images/Compressed/Kodachadri.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">KODACHADRI</h2>
+            </div>
         </div>
         <div class="container container-9">
             <div class="container-text">
@@ -159,8 +176,11 @@
                 <h5 class="float-text light">Best time to visit: September – January</h5>
             </div>
         </div>
-        <div class="container picture-10"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">PATTADKAL</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-10" style="background-image: url('../images/Compressed/Pattadkal.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">PATTADAKAL</h2>
+            </div>
         </div>
         <div class="container container-10">
             <div class="container-text">
@@ -173,8 +193,11 @@
                 <h5 class="float-text light">Best time to visit: October – March</h5>
             </div>
         </div>
-        <div class="container picture-11"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">PONDICHERRY</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-11" style="background-image: url('../images/Compressed/Pondicherry.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">PONDICHERRY</h2>
+            </div>
         </div>
         <div class="container container-11">
             <div class="container-text">
@@ -187,8 +210,11 @@
                 <h5 class="float-text light">Best time to visit: October – March​</h5>
             </div>
         </div>
-        <div class="container picture-12"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">RAMANAGARA CAMPING</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-12" style="background-image: url('../images/Compressed/Ramanagar.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">RAMANAGARA CAMPING</h2>
+            </div>
         </div>
         <div class="container container-12">
             <div class="container-text">
@@ -201,8 +227,11 @@
                 <h5 class="float-text light">Best time to visit: October - February​</h5>
             </div>
         </div>
-        <div class="container picture-13"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">AIHOLE</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-13" style="background-image: url('../images/Compressed/Aihole.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">AIHOLE</h2>
+            </div>
         </div>
         <div class="container container-13">
             <div class="container-text">
@@ -215,8 +244,11 @@
                 <h5 class="float-text light">Best time to visit:  October – March​</h5>
             </div>
         </div>
-        <div class="container picture-14"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">BANASURA HILL</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-14" style="background-image: url('../images/Compressed/Banasura.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">BANASURA HILL</h2>
+            </div>
         </div>
         <div class="container container-14">
             <div class="container-text">
@@ -229,8 +261,11 @@
                 <h5 class="float-text light">Best time to visit: September – January​</h5>
             </div>
         </div>
-        <div class="container picture-15"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">THE RUINS OF HAMPI</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-15" style="background-image: url('../images/Compressed/Hampi.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">THE RUINS OF HAMPI</h2>
+            </div>
         </div>
         <div class="container container-15">
             <div class="container-text">
@@ -243,8 +278,11 @@
                 <h5 class="float-text light">Best time to visit: October – February</h5>
             </div>
         </div>
-        <div class="container picture-16"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">HIDLUMANE FALLS</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-16" style="background-image: url('../images/Compressed/HidlumaneFalls.jpg'); background-position: center 79%"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">HIDLUMANE FALLS</h2>
+            </div>
         </div>
         <div class="container container-16">
             <div class="container-text">
@@ -257,8 +295,11 @@
                 <h5 class="float-text light">Best time to visit: September – January​</h5>
             </div>
         </div>
-        <div class="container picture-17"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">OOTY</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-17" style="background-image: url('../images/Compressed/Ooty.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">OOTY</h2>
+            </div>
         </div>
         <div class="container container-17">
             <div class="container-text">
@@ -271,8 +312,11 @@
                 <h5 class="float-text light">Best time to visit: July – February</h5>
             </div>
         </div>
-        <div class="container picture-18"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">MYSORE</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-18" style="background-image: url('../images/Compressed/Mysore.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">MYSORE</h2>
+            </div>
         </div>
         <div class="container container-18">
             <div class="container-text">
@@ -285,8 +329,11 @@
                 <h5 class="float-text light">Best time to visit: July – February</h5>
             </div>
         </div>
-        <div class="container picture-19"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">MELKOTE</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-19" style="background-image: url('../images/Compressed/Melkote.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">MELKOTE</h2>
+            </div>
         </div>
         <div class="container container-19">
             <div class="container-text">
@@ -299,8 +346,11 @@
                 <h5 class="float-text light">Best time to visit: June – February</h5>
             </div>
         </div>
-        <div class="container picture-20"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">ANJANADRI HILL</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-20" style="background-image: url('../images/Compressed/Anjanadri.jpg'); background-position: center 30%;"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">ANJANADRI HILL</h2>
+            </div>
         </div>
         <div class="container container-20">
             <div class="container-text">
@@ -313,8 +363,11 @@
                 <h5 class="float-text light">Best time to visit: January - December​</h5>
             </div>
         </div>
-        <div class="container picture-21"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">DEVARAMANE</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-21" style="background-image: url('../images/Compressed/Devaramane.jpg'); background-position: center 75%;"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">DEVARAMANE</h2>
+            </div>
         </div>
         <div class="container container-21">
             <div class="container-text">
@@ -327,8 +380,11 @@
                 <h5 class="float-text light">Best time to visit: October – March​</h5>
             </div>
         </div>
-        <div class="container picture-22"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">GOKARNA</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-22" style="background-image: url('../images/Compressed/Gokarna.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">GOKARNA</h2>
+            </div>
         </div>
         <div class="container container-22">
             <div class="container-text">
@@ -341,8 +397,11 @@
                 <h5 class="float-text light">Best time to visit: October – February</h5>
             </div>
         </div>
-        <div class="container picture-23"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">WAYANAD</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-23" style="background-image: url('../images/Compressed/Waynad.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">WAYANAD</h2>
+            </div>
         </div>
         <div class="container container-23">
             <div class="container-text">
@@ -355,8 +414,11 @@
                 <h5 class="float-text light">Best time to visit: October – May​</h5>
             </div>
         </div>
-        <div class="container picture-24"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">COORG</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-24" style="background-image: url('../images/Compressed/Coorg.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">COORG</h2>
+            </div>
         </div>
         <div class="container container-24">
             <div class="container-text">
@@ -369,8 +431,11 @@
                 <h5 class="float-text light">Best time to visit: October – May​</h5>
             </div>
         </div>
-        <div class="container picture-25"> 
-            <h2 class="picture-heading fade-in" id="picture-heading">JOG FALLS</h2>
+        <div class="container">
+            <div class="bg-wrap">
+                <div class="bg picture-25" style="background-image: url('../images/Compressed/Jog.jpg');"></div>
+                <h2 class="picture-heading fade-in" id="picture-heading">JOG FALLS</h2>
+            </div>
         </div>
         <div class="container container-25">
             <div class="container-text">
@@ -405,6 +470,7 @@
 <script src="js/script.js"></script>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/rellax.min.js"></script>
+
 <script>  
 // Also can pass in optional settings block
   var rellax = new Rellax('.rellax', {
