--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="container">
             <div class="bg-wrap">
-                <div class="bg picture-1" style="background-image: url('../images/Compressed/Yercard.jpg');"></div>
+                <div class="bg picture-1"></div>
                 <h2 class="picture-heading fade-in" id="picture-heading">YERCAUD</h2>
             </div>
         </div>
@@ -41,7 +41,7 @@
 
         <div class="container">
             <div class="bg-wrap">
-                <div class="bg picture-2" style="background-image: url('../images/Compressed/Gandikota.jpg');"></div>
+                <div class="bg picture-2"></div>
                 <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
             </div>
         </div>
