--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
         <section>
             <div class="bg-wrap">
-                <div class="bg picture-2"></div>
-                <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
+                <div class="bg picture-2 fade-in"></div>
+                <h2 class="picture-heading" id="picture-heading">GANDIKOTA</h2>
             </div>
         </section>
 
