--- a/index.html
+++ b/index.html
@@ -39,19 +39,12 @@
             </div>
         </div>
 
-        <!-- <div class="container">
+        <div class="container">
             <div class="bg-wrap">
                 <div class="bg picture-2"></div>
                 <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
             </div>
-        </div> -->
-
-        <section>
-            <div class="bg-wrap">
-                <div class="bg picture-2 fade-in"></div>
-                <h2 class="picture-heading" id="picture-heading">GANDIKOTA</h2>
-            </div>
-        </section>
+        </div>
 
         <div class="container container-2">
             <div class="container-text">
