--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="container">
             <div class="bg-wrap">
-                <div class="bg picture-2"></div>
+                <div class="bg picture-2" style="background-image: url('../images/Compressed/Gandikota.jpg');"></div>
                 <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
             </div>
         </div>
@@ -141,7 +141,7 @@
                 <h5 class="float-text light">Best time to visit: November – February</h5>
             </div>
         </div>
-        <div class="container">
+        <!-- <div class="container">
             <div class="bg-wrap">
                 <div class="bg picture-8" style="background-image: url('../images/Compressed/Belur.jpg'); background-position: bottom center;"></div>
                 <h2 class="picture-heading fade-in" id="picture-heading">BELURU</h2>
@@ -446,7 +446,7 @@
             <div class="bottom-float-text rellax" id="bottom-float-text-25" data-rellax-speed="5">
                 <h5 class="float-text light">Best time to visit: August – December​</h5>
             </div>
-        </div>
+        </div> -->
         <div class="container outro">
             <div class="outro-text">
                 <h1 class="main-heading px-2 sliders from-left" id="main-heading">MORE TO COME!!</h1>
@@ -479,6 +479,7 @@
       wrapper: null,
       round: true,
   });
+
 </script>
 </body>
 </html>
