--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
             </div>
         </div>
 
+        <div class="container picture-1">
+            <h2 class="picture-heading fade-in" id="picture-heading">YERCAUD</h2>
+        </div>
+
         <div class="container">
             <div class="bg-wrap">
                 <div class="bg picture-1"></div>
                 <h2 class="picture-heading fade-in" id="picture-heading">YERCAUD</h2>
             </div>
         </div>
+
+       
 
         <div class="container container-1">
             <div class="container-text">
@@ -36,6 +42,10 @@
                 <h5 class="float-text light">
                     Best time to visit: October – February</h5>
             </div>
+        </div>
+
+        <div class="container picture-2">
+            <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
         </div>
 
         <div class="container">
@@ -468,7 +478,7 @@
    
 <script src="js/script.js"></script>
 <script src="js/jquery-3.4.1.min.js"></script>
-<script src="js/rellax.min.js"></script>
+<!-- <script src="js/rellax.min.js"></script>
 
 <script>  
 // Also can pass in optional settings block
@@ -480,6 +490,6 @@
       round: true,
   });
 
-</script>
+</script> -->
 </body>
 </html>
